--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Svelte app</title>
+    <title>Time Progress</title>
 
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="./build/app.css" />
@@ -13,5 +13,5 @@
     <script defer src="./build/bundle.js"></script>
   </head>
 
-  <body></body>
+  <body style="-webkit-app-region: drag"></body>
 </html>
